--- a/Ejemplo/index.html
+++ b/Ejemplo/index.html
@@ -6,16 +6,7 @@
 <head>  
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 </head>  
-<body ng-controller='mainController'>  
-  <header>
-    <h1>Capacitacion Angular</h1>
-      <nav> 
-        <ul> 
-          <li><a ng-click="redirectToHome()">Inicio</a></li>
-          <li><a ng-click="redirectToUsuario()">Usuario</a></li>
-          <li><a ng-click="redirectToContacto()">Contacto</a></li></ul> 
-      </nav>
-    </header>
+<body>  
 
     <!-- Aca inyectamos las vistas -->
     <div ui-view></div> 
